3.5.425. Fix whisper button visibility on mod cards. Fix log message colors. Reduce logging when not running a development build. Fix ban notices rendering HTML.

--- a/style.css
+++ b/style.css
@@ -1346,6 +1346,7 @@ body:not(.ffz-hide-friends) .ffz-moderation-card .follow-button {
 
 .ffz-moderation-card button.message {
 	height: 30px;
+	font-size: 1.2em;
 }
 
 .ffz-moderation-card.ffz-is-mod .button.ban,
